--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>My first web application</title>
 	</head>
 	<body>
 		<h1>My name is Alind</h1>
