--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
 	</head>
 	<body>
 		<h1>My name is Alind</h1>
+		<form>
+			<input type="text" name="First_name">
+			<input type="submit" name="register">
+		</form>
 	</body>
 </html>
