Added a background image

--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
-<html>
+<style>
+	body{
+		background-image: url("background1.png");
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: center;
+		height: 100%;
+			}
+</style>
+<html style="height: 100%">
 	<head>
 		<title>My first web application</title>
 	</head>
